Fixed contrast with headings

--- a/wdd230/lesson3/css/medium.css
+++ b/wdd230/lesson3/css/medium.css
@@ -4,6 +4,10 @@
     border-bottom: 0;
   }
 
+  main {
+    padding: 1rem;
+  }
+
   nav ul {
     display: flex;
   }
